Version 1.8.1

   - Added recording of first hitting time for nodes
   - Added options to CompartmentedMode.markOccupied() and CompartmentedModel.markHit()
     to only record the first occupation and hitting times respectively,
     and to ignore subsequent re-transmission or -infection
   - Added tests to make sure epidemics happend (when they should) on a per-model
     basis but under both dynamics
   - Added more tests for generating functions

Version 1.7.2 (2021-07-06)

   - Fixed generating functions library not installing

Version 1.7.1 (2021-06-10)

   - Changed implementation of Percolate to use the Newman-Ziff approach
   - Refactored the setting of initial compartments in CompartmentedModel to
     use changeInitialCompartment instead of changeCompartment, so that initial
     behaviour can be different
   - Changed the cookbook recipe on choosing which nodes to infect to include
     more code
   - Changed the exception raised by CompartmentedModel.initialCompartmentDistribution
     in the case of an illegal distribution to ValueError
   - Integrated the generating functions library
   - Added type annotations to documentation format (makes reading the docs easier)
   - Added "shuffle" process for rewiring edges
   - Wrote implementation note on generating functions

Version 1.6.1 (2021-05-13)

   - Added topology marker to parameters to capture the network generator used
   - Changed names of network generation parameters to match the topology markers
   - Added class inheritance diagram to documentation
   - Added speed improvements to front page
   - Added discussion of going from R values to SIR parameters

Version 1.5.1 (2021-04-27)

   - Started maintaining simulation time in NetworkDynamics
   - Changed the way Monitor represents its results, to avoid problems persisting
     in HDF5 lab notebooks
   - Lots of changes to typing and imports, for code style
   - Upgraded Locus to get a major performance improvement